X3 C++ PluginFramework

2011-06-19

    * Add '-shared' to C_FLAGS only for plugins (lib*.so, except *.app).
    * Add 'static const' keyword to class id definition.

    * Include PluginManager.h in XComCreator.h, so x3GetObjectFactory can use the exist handle of PluginManager.
    * Add '-fPIC' to C_FLAGS_SO in config.mk

2011-06-17

    * Remove Ix_ObjectFactory::HasCreatorReplaced, SpecialInterfaceObject.
    * Remove iidSpecial field in X3CLASSENTRY.

------v1.0.10------

2011-06-16

    * Add x3 namespace in revision 159.
    * Change interfaces to classes.

2011-06-15

    * Write error code for LoadLibraryExW in PluginManager.
    * Add notes for including XComCreator.h
    * Fix *.vcproj
    * Add 'IDS_CHANGE_FAIL' in ConfigXml plugin.

------v1.0.9------

2011-06-02, Li Jian (Aaron) <mcuit@hotmail.com>, Zhang Yun Gui

    * Add makefile for Linux.

2011-05-26

    * Add example projects: HollowView and HollowViewApp.
    * Fix Cx_PluginLoader::LoadPluginFiles.

2011-05-24

    * Disable copy operators. Replace std::w2a to x3::w2a.
    * Implement configxml plugin using tinyxml (not completed).
    * Change portability functions for Linux and Windows.
    * Not call InterlockedCompareExchange in Cx_SingletonObject.

2011-05-18

    * Implement portability for Linux.
    * tags/x3c-1.0.8-beforelinux: Ready to implement portability.
    * Move VC++ project files to 'projects\msvc'.
    * Change CodeBlocks projects to Linux. Add portimpl.h and linuximpl.h

2011-05-12

    * ConfigXml: Output error info when saving file.

2011-04-29

    * FileUtility: Using CopyFileW for coping small file on Win7 instead of calling SHFileOperationW.
    * LogWriter: Not call CopyLogFilesToServer() when error occurred by default.
    * Add a test case for Ix_FileUtility.

------v1.0.8------

2011-02-28

    * FileUtility: Add FOF_SILENT flag for SHFileOperationW.
    * LogManager: Avoid reenter in WriteLog.
    * LogWriter: Hide progress UI in CopyLogFilesToServer.